argocd/namespace-argocd.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: argocd
spec: {}
